--- a/h/templates/pattern_library.html.jinja2
+++ b/h/templates/pattern_library.html.jinja2
@@ -801,7 +801,7 @@
             <a class="load-more small" href=""></a>
 
             <ul class="thread-replies">
-              <li class="thread" deep-count="count" thread="child" thread-filter="">
+              <li class="thread" deep-count="count" thread="child">
                 <a href="" class="threadexp" title="Collapse"><span class="h-icon-expand-less"></span></a>
 
                 <article class="annotation thread-message" name="annotation" annotation="vm.container.message" annotation-embedded="true" >
