--- a/h/static/styles/variables.scss
+++ b/h/static/styles/variables.scss
@@ -68,6 +68,7 @@ $headings-font-family:    inherit !default;
 $headings-color:          inherit !default;
 
 $body1-font-size:         12px;
+$body1-line-height:       1.4em;
 
 //STANCE COLORS
 $positive: #3aab39;
