--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -46,6 +46,7 @@
   </li>
 </ul>
 
-<footer class="thread-anchor-notice" ng-if="!vm.container.message.$anchored">
+<footer class="thread-anchor-notice"
+        ng-if="feature('show_unanchored_annotations') && !vm.container.message.$anchored">
   <em>We can't find the exact position of this annotation.</em>
 </footer>
