--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -10,7 +10,7 @@
     <i class="h-icon-arrow-drop-down"></i>
   </span>
   <ul class="dropdown-menu pull-right" role="menu">
-    <li ng-repeat="group in groups.all()">
+    <li ng-repeat="group in sortedGroups()">
       <div ng-class="{'group-item': true, selected: group.id == groups.focused().id}"
            ng-click="groups.focus(group.id)">
         <!-- the group icon !-->
