Use more consistent naming for groupList directive
 * Use the singular 'groupList' everywhere

 * Simplify the logic for stopping click propagation
   when toggling the selected group

 * Remove underscore prefix for Controller classes as per the PR
   discussion.

Card 87

--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -27,7 +27,7 @@
                {{group.name}}
             </a>
           </div>
-          <div class="share-link-container" ng-click="stopClickPropagation($event)" ng-if="!group.public">
+          <div class="share-link-container" ng-click="$event.stopPropagation()" ng-if="!group.public">
             <div>
               <a class="share-link-toggle"
                  href=""
