Add WebKit / IE prefixes for flexbox
For IE 10 and Safari < 9 support, use prefixed flexbox.

For now, this duplicates the flexbox declarations as is
done in topbar.scss. I will look into using autoprefixer for
this separately.

Card 87

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -1,4 +1,5 @@
 @import 'compass';
+@import 'compass/css3/flexbox';
 
 $base-font-size: 12px;
 $base-line-height: 20px;
@@ -100,8 +101,13 @@ $group-list-width: 270px;
   }
 
   .group-item {
-    display: flex;
-    flex-direction: row;
+    @include display-flex;
+    @include flex-direction(row);
+
+    // IE 10 support
+    display: -ms-flexbox;
+    -ms-flex-direction: row;
+
     padding: 10px;
     cursor: pointer;
 
