--- a/h/static/styles/base.scss
+++ b/h/static/styles/base.scss
@@ -1,4 +1,4 @@
-@import "compass/css3";
+@import 'compass/css3';
 @import 'compass/reset/utilities';
 
 @import "./variables";
@@ -6,15 +6,13 @@
 /* Style input placeholders */
 @mixin placeholder {
   &.placeholder { @content; }
-  &:-moz-placeholder { @content; }
-  &::-moz-placeholder { @content; }
-  &:-ms-input-placeholder { @content; }
-  &::-webkit-input-placeholder { @content; }
+  &:placeholder { @content; }
+  &::placeholder { @content; }
 }
 
 /* Shadow mixins */
 @mixin smallshadow($a: 0, $b: 1px, $c: .1) {
-  @include box-shadow($a $b 1px hsla(0, 0%, 0%, $c));
+  box-shadow: $a $b 1px hsla(0, 0%, 0%, $c);
 }
 
 @mixin quote {
