--- a/h/static/styles/annotator/inject.scss
+++ b/h/static/styles/annotator/inject.scss
@@ -5,7 +5,7 @@ $base-font-size: 14px;
 
 //ADDER////////////////////////////////
 .annotator-adder {
-  @include box-sizing(border-box);
+  box-sizing: border-box;
   direction: ltr;
   height: 35px;
   margin-left: -20px;
@@ -151,7 +151,7 @@ $base-font-size: 14px;
   }
 
   ul, li {
-    @include box-sizing(border-box);
+    box-sizing: border-box;
     @include reset-box-model;
     @include reset-list-style;
   }
