--- a/h/static/styles/markdown-editor.scss
+++ b/h/static/styles/markdown-editor.scss
@@ -1,5 +1,3 @@
-@import 'compass/css3/user-interface';
-
 //MARKDOWN EDITOR //////////////////////////
 .markdown-preview {
   overflow: auto;
@@ -18,7 +16,7 @@
   width: 100%;
   margin-bottom: -.1em;
   padding: .7em .7em .7em .5em;
-  @include user-select(none);
+  user-select: none;
 
   &.disable {
     .markdown-tools-button {
