--- a/h/static/styles/topbar.scss
+++ b/h/static/styles/topbar.scss
@@ -1,5 +1,3 @@
-@import 'compass/css3/flexbox';
-
 @import 'base';
 @import 'mixins/responsive';
 
@@ -17,23 +15,16 @@
 }
 
 .topbar .inner {
-  @include display-flex;
-  @include flex-flow(row nowrap);
-  @include align-items(center);
-  @include justify-content(space-between);
-
-  /* IE10 support */
-  display: -ms-flexbox;
-  -ms-flex-align: center;
-  -ms-flex-flow: row nowrap;
-  -ms-flex-pack: justify;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
 
   height: 28px;
 }
 
 .topbar .inner .simple-search {
-  @include flex-grow(1);
-  -ms-flex: 1;  /* IE10 support */
+  flex-grow: 1;
   margin-right: .75em;
   overflow: hidden;
 }
