Hide unanchored warnings when not sidebar
Don't show the "We can't find the exact position of this annotation"
warnings on unanchored annotations when on the stream or individual
annotation pages - only show them in the sidebar.

--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -47,6 +47,6 @@
 </ul>
 
 <footer class="thread-anchor-notice"
-        ng-if="feature('show_unanchored_annotations') && !vm.container.message.$anchored">
+        ng-if="feature('show_unanchored_annotations') && isSidebar && !vm.container.message.$anchored">
   <em>We can't find the exact position of this annotation.</em>
 </footer>
