--- a/h/static/styles/dropdown-menu-btn.scss
+++ b/h/static/styles/dropdown-menu-btn.scss
@@ -1,5 +1,6 @@
 // the primary action button for a form
 .dropdown-menu-btn {
+  $text-color: #f1f1f1;
   $default-background-color: #626262;
   $hover-background-color: #3A3A3A;
   $h-padding: 9px;
@@ -12,7 +13,6 @@
   border: 0px;
   border-radius: $border-radius;
 
-  color: #F1F1F1;
   font-size: $body1-font-size;
   font-weight: bold;
   height: $height;
@@ -23,12 +23,19 @@
   &__label {
     // the label occupies the entire space of the button and
     // shows a darker state on hover
+
+    width: 100%;
+    height: 100%;
+
+    color: $text-color;
     background-color: transparent;
     border-radius: $border-radius;
+    border: none;
     line-height: $height;
     padding-left: $h-padding;
     padding-right: $arrow-indicator-width + 8px;
-    height: 100%;
+
+    text-align: left;
     vertical-align: middle;
 
     &:hover {
@@ -49,11 +56,24 @@
 
     height: 100%;
     width: $arrow-indicator-width;
+    padding-left: 0px;
     padding-right: $h-padding;
     margin-left: 8px;
 
+    border: none;
+    background-color: transparent;
     border-top-right-radius: $border-radius;
     border-bottom-right-radius: $border-radius;
+
+    &:hover {
+      background-color: #3A3A3A;
+    }
+
+    &:hover &-separator {
+      // hide the 1px vertical separator when the dropdown arrow
+      // is hovered
+      background-color: transparent;
+    }
 
     // 1px vertical separator between label and dropdown arrow
     &-separator {
@@ -65,11 +85,13 @@
 
       width: 1px;
       height: 15px;
+
       background-color: #818181;
     }
 
     // the ▼ arrow which reveals the dropdown menu when clicked
     &-indicator {
+      color: $text-color;
       position: absolute;
       left: 0px;
       right: 0px;
@@ -78,11 +100,6 @@
       line-height: $height;
       text-align: center;
 
-      &:hover {
-        background-color: #3A3A3A;
-        border-top-right-radius: $border-radius;
-        border-bottom-right-radius: $border-radius;
-      }
 
       & > div {
         transform: scaleY(0.7);
