--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -1,4 +1,4 @@
-<div class="pull-right" dropdown>
+<div class="pull-right" dropdown keyboard-nav>
   <span class="dropdown-toggle"
         dropdown-toggle
         data-toggle="dropdown"
