--- a/h/templates/client/publish_annotation_btn.html
+++ b/h/templates/client/publish_annotation_btn.html
@@ -1,4 +1,4 @@
-<div dropdown="" class="publish-annotation-btn__btn" is-open="vm.showDropdown">
+<div dropdown="" class="publish-annotation-btn__btn" is-open="vm.showDropdown" keyboard-nav>
   <dropdown-menu-btn
     label="'Post to ' + vm.publishDestination"
     ng-click="vm.save()"
