--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -18,7 +18,7 @@
                     'other': 'Showing {} selected annotations.'}"></span>
       <a href="" ng-click="clearSelection()">Clear selection</a>.</li>
   <li ng-show="isStream">
-    <span class="ng-cloak" dropdown>
+    <span class="ng-cloak" dropdown keyboard-nav>
       <span role="button"
             data-toggle="dropdown"
             dropdown-toggle>
