Implement the sticky privacy behavior in the new annotation publish button
Re-implement the behavior where new annotations
use the last-used privacy setting by default.

This was previously implemented in privacy.js
and the logic now lives in the replacement component,
publish-annotation-btn.js. However, the defaults
really shouldn't be set in the view but earlier when
the new annotation is created.

Card 89

--- a/h/templates/client/publish_annotation_btn.html
+++ b/h/templates/client/publish_annotation_btn.html
@@ -7,14 +7,14 @@
     dropdown-menu-label="Change annotation sharing setting">
   </dropdown-menu-btn>
   <ul class="dropdown-menu pull-right publish-annotation-btn__dropdown-menu" role="menu">
-    <li ng-click="vm.setShared()">
+    <li ng-click="vm.setPrivacy('shared')">
       <a href="">
         <i class="small"
            ng-class="'h-icon-' + vm.group.type"></i>
         <span ng-bind="vm.group.name"></span>
       </a>
     </li>
-    <li ng-click="vm.setPrivate()">
+    <li ng-click="vm.setPrivacy('private')">
       <a href="">
         <i class="small h-icon-lock"></i>
         <span ng-bind="vm.privateLabel"></span>
