--- a/h/templates/client/publish_annotation_btn.html
+++ b/h/templates/client/publish_annotation_btn.html
@@ -7,19 +7,30 @@
     dropdown-menu-label="Change annotation sharing setting"
     is-disabled="!canPost">
   </dropdown-menu-btn>
-  <ul class="dropdown-menu pull-right publish-annotation-btn__dropdown-menu" role="menu">
+  <ul class="dropdown-menu pull-right group-list publish-annotation-btn__dropdown-menu" role="menu">
     <li ng-click="vm.setPrivacy('shared')">
-      <a href="">
-        <i class="small"
-           ng-class="'h-icon-' + vm.group.type"></i>
-        <span ng-bind="vm.group.name"></span>
-      </a>
+      <div class="group-item">
+        <div class="group-icon-container">
+          <i class="small" ng-class="'h-icon-' + vm.group.type"></i>
+        </div>
+        <div class="group-details">
+          <div class="group-name-container">
+            <a href="" class="group-name-link" ng-bind="vm.group.name"></a>
+          </div>
+        </div>
+      </div>
     </li>
     <li ng-click="vm.setPrivacy('private')">
-      <a href="">
-        <i class="small h-icon-lock"></i>
-        <span ng-bind="vm.privateLabel"></span>
-      </a>
+      <div class="group-item">
+        <div class="group-icon-container">
+          <i class="small h-icon-lock"></i>
+        </div>
+        <div class="group-details">
+          <div class="group-name-container">
+            <a href="" class="group-name-link" ng-bind="vm.privateLabel"></a>
+          </div>
+        </div>
+      </div>
     </li>
   </ul>
 </div>
