Update Cancel button style as per design
 * Use cancel button with a thin circle outline

 * Change normal and hover colors to light/dark grey as
   per discussion on the card.

Card 89

--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -256,7 +256,10 @@
 
 .btn-icon {
   display: inline-block;
-  transform: scale(1.2);
+  // enlarge icons within buttons and shift the icon
+  // down slightly so that the icon aligns vertically
+  // with the button label
+  transform: scale(1.2) translateY(10%);
 }
 
 // Positions a message/icon to the left of a button.
