--- a/h/templates/client/publish_annotation_btn.html
+++ b/h/templates/client/publish_annotation_btn.html
@@ -34,3 +34,9 @@
     </li>
   </ul>
 </div>
+<button class="publish-annotation-cancel-btn btn-clean"
+        ng-click="vm.cancel()"
+        title="Cancel changes to this annotation"
+        >
+  <i class="h-icon-cancel-outline publish-annotation-cancel-btn__icon btn-icon"></i> Cancel
+</button>
