Remove dependencies on threading service
Have WidgetController, StreamController and AnnotationViewerController
just use annotationMapper only and not use threading directly.

Added threads() and thread(id) to annotationMapper's API to support
this.

--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -43,7 +43,7 @@
       ng-mouseenter="focus(child.message)"
       ng-click="scrollTo(child.message)"
       ng-mouseleave="focus()"
-      ng-repeat="child in threadRoot.children | orderBy : sort.predicate"
+      ng-repeat="child in threads() | orderBy : sort.predicate"
       ng-show="shouldShowThread(child) && (count('edit') || count('match') || !threadFilter.active()) || vm.isNew()">
   </li>
 </ul>
