Fix an issue where clicking the dropdown arrow in Chrome saved changes
In Chrome, clicks on elements inside a disabled <button>
will not invoke the <button>'s "click" event listeners
but they will propagate through the button and invoke parent
element's click handlers. In Firefox however, the click
event is not propagated.

The fix here is to install the click handler for the main
part of a dropdown button on the <button> itself, rather than
the container <div> which holds the main button and
the dropdown arrow.

Card 89

--- a/h/templates/client/dropdown_menu_btn.html
+++ b/h/templates/client/dropdown_menu_btn.html
@@ -1,5 +1,10 @@
 <div class="dropdown-menu-btn">
-  <button class="dropdown-menu-btn__label" ng-bind="label" ng-disabled="isDisabled"></button>
+  <button
+    class="dropdown-menu-btn__label"
+    ng-bind="label"
+    ng-click="vm.onClick($event)"
+    ng-disabled="isDisabled">
+  </button>
   <button
     class="dropdown-menu-btn__dropdown-arrow"
     title="{{dropdownMenuLabel}}"
