--- a/h/templates/client/share_dialog.html
+++ b/h/templates/client/share_dialog.html
@@ -11,22 +11,22 @@
         type="text"
         ng-value="viaPageLink"
         readonly /></p>
-    <p class="share-links">
+    <p class="share-link-icons">
     <a href="//twitter.com/intent/tweet?url={{viaPageLink}}"
        target="_blank"
        title="Tweet link"
-       class="h-icon-twitter"></a>
+       class="share-link-icon h-icon-twitter"></a>
     <a href="//www.facebook.com/sharer/sharer.php?u={{viaPageLink}}"
        target="_blank"
        title="Share on Facebook"
-       class="h-icon-facebook"></a>
+       class="share-link-icon h-icon-facebook"></a>
     <a href="//plus.google.com/share?url={{viaPageLink}}"
        target="_blank"
        title="Post on Google Plus"
-       class="h-icon-google-plus"></a>
+       class="share-link-icon h-icon-google-plus"></a>
     <a href="mailto:?subject=Let's%20Annotate&amp;body={{viaPageLink}}"
        title="Share via email"
-       class="h-icon-mail"></a>
+       class="share-link-icon h-icon-mail"></a>
     </p>
   </div>
   </div>
