--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -29,7 +29,7 @@
            on-clear="search.clear()"></div>
       <!-- / Searchbar -->
 
-      <group-list class="group-list" ng-if="auth.user && feature('groups')">
+      <group-list class="group-list" ng-if="auth.user && feature('groups') && isEmbedded">
       </group-list>
 
       <div ng-switch="auth.user">
