--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -14,7 +14,7 @@
 <article class="annotation thread-message {{vm.collapsed && 'collapsed'}}"
          name="annotation"
          annotation="vm.container.message"
-         annotation-embedded="{{isEmbedded}}"
+         is-sidebar="{{isSidebar}}"
          annotation-show-reply-count="{{vm.shouldShowNumReplies()}}"
          annotation-reply-count="{{vm.numReplies()}}"
          annotation-reply-count-click="vm.toggleCollapsed()"
