--- a/h/templates/pattern_library.html.jinja2
+++ b/h/templates/pattern_library.html.jinja2
@@ -804,7 +804,7 @@
               <li class="thread" deep-count="count" thread="child" thread-filter="">
                 <a href="" class="threadexp" title="Collapse"><span class="h-icon-expand-less"></span></a>
 
-                <article class="annotation thread-message" name="annotation" annotation="vm.container.message" annotation-embedded="true" >
+                <article class="annotation thread-message" name="annotation" annotation="vm.container.message" is-sidebar="true" >
                   <header>
                     <span class="">
                       <username user="vm.annotation.user" class=""><span class="user ng-binding">aron</span></username>
