Consolidate thread show/hide logic into ThreadController
This template conditional is notorious for accumulating extra terms, so
this commit rolls it into ThreadController where it can be more easily
tested.

--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -44,7 +44,7 @@
       ng-click="scrollTo(child.message)"
       ng-mouseleave="focus()"
       ng-repeat="child in threadRoot.children | orderBy : sort.predicate"
-      ng-show="shouldShowThread(child) && (count('edit') || count('match') || !threadFilter.active()) || vm.isNew()">
+      ng-show="vm.shouldShow()">
   </li>
 </ul>
 <!-- / Thread view -->
