--- a/h/templates/deform/mapping_item.jinja2
+++ b/h/templates/deform/mapping_item.jinja2
@@ -7,12 +7,12 @@
 {% endif -%}
 
 {%- if not (field.widget.hidden or field.widget.category == 'structural') -%}
-  <label class="form-label"
+  <label class="form-label{% if field.widget.label_css_class %} {{ field.widget.label_css_class }}{% endif %}"
          {%- if field.description -%}
          title="{{ _(field.description) }}"
          {% endif %}
          for="{{ field.oid }}">
-    {{ _(field.title) }}:
+    {{ _(field.title) }}
     {%- if field.schema.hint -%}
       <span class="form-hint" id="hint-{{ field.oid }}">({{ field.schema.hint }})</span>
     {% endif -%}
