--- a/h/templates/deform/includes/common_attrs.jinja2
+++ b/h/templates/deform/includes/common_attrs.jinja2
@@ -1,6 +1,9 @@
 {% if field.schema.hint -%}
 aria-describedby="hint-{{ field.oid }}"
 {% endif -%}
+{%- if field.widget.autofocus -%}
+autofocus onfocus="this.select()"
+{% endif -%}
 {%- if field.widget.max_length -%}
 maxlength="{{ field.widget.max_length }}"
 {% endif -%}
