Add aria-invalid to inputs with errors
This ARIA annotation helps screenreader users to navigate between form
fields with errors.

--- a/h/templates/deform/includes/common_attrs.jinja2
+++ b/h/templates/deform/includes/common_attrs.jinja2
@@ -1,6 +1,9 @@
 {% if field.schema.hint -%}
 aria-describedby="hint-{{ field.oid }}"
 {% endif -%}
+{%- if field.error %}
+aria-invalid="true"
+{% endif -%}
 {%- if field.widget.autofocus -%}
 autofocus onfocus="this.select()"
 {% endif -%}
