--- a/h/templates/deform/emailinput.jinja2
+++ b/h/templates/deform/emailinput.jinja2
@@ -1,9 +1,2 @@
 <input type="email"
-       name="{{ field.name }}"
-       value="{{ cstruct }}"
-       {%- if field.widget.size %}
-       size="{{ field.widget.size }}"
-       {% endif %}
-       {% include "includes/common_attrs.jinja2" -%}
-       class="form-input{% if field.widget.css_class %} {{ field.widget.css_class }}{% endif %}"
-       id="{{ field.oid }}"/>
+{% include "includes/common_attrs.jinja2" %}>
