Replace form.extra_actions with a straightforward HTML footer
This is less safe, but for now we need to pass a variety of different
bits of HTML into this part of the form to preserve before/after
behaviour.

--- a/h/templates/deform/form.jinja2
+++ b/h/templates/deform/form.jinja2
@@ -14,9 +14,7 @@
 
   <div class="form-actions">
     <div class="form-actions-message">
-      {%- for title, href in field.extra_actions -%}
-        <a href="{{ href }}">{{ title }}</a>
-      {% endfor -%}
+      {%- if field.footer %}{{ field.footer | safe }}{% endif -%}
     </div>
     <div class="form-actions-buttons">
       {%- for button in field.buttons -%}
