Leave newline before form hint
Simply for consistency with the look-and-feel before these changes, keep
the newline (and hence small extra space) between the form field name
and the form hint.

--- a/h/templates/deform/mapping_item.jinja2
+++ b/h/templates/deform/mapping_item.jinja2
@@ -13,7 +13,7 @@
          {% endif %}
          for="{{ field.oid }}">
     {{ _(field.title) }}
-    {%- if field.schema.hint -%}
+    {%- if field.schema.hint %}
       <span class="form-hint" id="hint-{{ field.oid }}">({{ field.schema.hint }})</span>
     {% endif -%}
   </label>
