Remove client-side auth/registration form code
This commit removes all of the client-side code for handling the
following forms:

- registration
- forgot password
- reset password

The login form remains, as it is of course very convenient to be able to
log into Hypothesis from the sidebar.

--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -124,7 +124,7 @@
 {% block ga_pageview %}{% endblock %}
 
 {% block scripts %}
-  {% assets "app_js", "account_js" %}
+  {% assets "app_js" %}
     <script src="{{ ASSET_URL }}"></script>
   {% endassets %}
 {% endblock %}
