--- a/h/static/styles/variables.scss
+++ b/h/static/styles/variables.scss
@@ -15,11 +15,12 @@ $gray-lightest: #f9f9f9 !default;
 $color-mine-shaft: #3A3A3A;
 $color-dove-gray: #626262;
 $color-silver-chalice: #a6a6a6;
+$color-silver: #bbb;
 $color-alto: #dedede;
 $color-seashell: #f1f1f1;
 $color-wild-sand: #f5f5f5;
 
-// COLORS
+//COLORS
 $brand-color: #bd1c2b !default;
 
 $button-text-color: $gray-dark !default;
