Use request_param in admin views
Makes the code simpler.

--- a/h/templates/admin/staff.html.jinja2
+++ b/h/templates/admin/staff.html.jinja2
@@ -31,7 +31,7 @@
     <div class="panel-body">
       <form
         method="POST" 
-        action="{{ request.route_url('admin_staff_remove') }}">
+        action="{{ request.route_url('admin_staff') }}">
         <ul>
           {% for user in staff %}
             <li>
