--- a/h/templates/admin/admins.html.jinja2
+++ b/h/templates/admin/admins.html.jinja2
@@ -31,7 +31,7 @@
     <div class="panel-body">
       <form
         method="POST" 
-        action="{{ request.route_url('admin_admins_remove') }}">
+        action="{{ request.route_url('admin_admins') }}">
         <ul>
           {% for user in admin_users %}
             <li>
