--- a/h/templates/admin/nipsa.html.jinja2
+++ b/h/templates/admin/nipsa.html.jinja2
@@ -34,7 +34,7 @@
       {% if userids %}
       <form 
         method="POST" 
-        action="{{ request.route_url('admin_nipsa_remove') }}">
+        action="{{ request.route_url('admin_nipsa') }}">
         <ul>
           {% for userid in userids %}
             <li>
