Enable privacy dropdown even when saving an annotation is disabled
 * Implement design change to allow a user to change the privacy
   setting for an annotation even if the annotation cannot
   yet be published because no tags or text have been entered.

 * Disable the hover state for the main section of the button
   when it is disabled.

T-125

--- a/h/static/styles/dropdown-menu-btn.scss
+++ b/h/static/styles/dropdown-menu-btn.scss
@@ -37,7 +37,7 @@
     text-align: left;
     vertical-align: middle;
 
-    &:hover {
+    &:hover:not(:disabled) {
       background-color: $hover-background-color;
     }
 
