--- a/h/templates/client/dropdown_menu_btn.html
+++ b/h/templates/client/dropdown_menu_btn.html
@@ -1,6 +1,6 @@
 <div class="dropdown-menu-btn">
   <button
-    class="dropdown-menu-btn__label"
+    class="dropdown-menu-btn__btn"
     ng-bind="label"
     ng-click="vm.onClick($event)"
     ng-disabled="isDisabled">
