--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -8,6 +8,7 @@ $base-line-height: 20px;
 @import './common';
 
 // components
+@import './primary-action-btn';
 @import './dropdown-menu-btn';
 @import './publish-annotation-btn';
 @import './share-link';
