--- a/h/static/styles/variables.scss
+++ b/h/static/styles/variables.scss
@@ -14,6 +14,7 @@ $gray-lightest: #f9f9f9 !default;
 
 $color-mine-shaft: #3A3A3A;
 $color-dove-gray: #626262;
+$color-gray: #818181;
 $color-silver-chalice: #a6a6a6;
 $color-silver: #bbb;
 $color-alto: #dedede;
