UI tweaks for the group creation form
 * Increase the spacing between the label and the group name

 * Disable focus outline for the group name field, since
   the input has no border

 * Disable autocomplete for the group name field, since
   we are prompting for a _new_ name

--- a/h/static/styles/group-form.scss
+++ b/h/static/styles/group-form.scss
@@ -53,6 +53,7 @@
 
     &__name-label {
       font-size: 18px;
+      margin-bottom: 10px;
     }
 
     &__name-input {
@@ -62,6 +63,7 @@
       text-align: center;
       margin-bottom: 40px;
       width: 350px;
+      outline: none;
 
       // TODO - Cyan cursor color
 
