--- a/h/browser/chrome/manifest.json.jinja2
+++ b/h/browser/chrome/manifest.json.jinja2
@@ -28,17 +28,7 @@
   "background": {
     "persistent": true,
     "scripts": [
-      "lib/settings.js",
-      "lib/tab-store.js",
-      "lib/tab-state.js",
-      "lib/tab-error-cache.js",
-      "lib/sidebar-injector.js",
-      "lib/browser-action.js",
-      "lib/help-page.js",
-      "lib/errors.js",
-      "lib/hypothesis-chrome-extension.js",
-      "lib/install.js",
-      "lib/blocklist.js"
+      "lib/extension-bundle.js"
     ]
   },
   "browser_action": {
