Extract the search/selection status bar into its own directive
In preparation for implementing a new design for the search/selection
status bar, extract it into its own directive.

--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -117,6 +117,9 @@
   <script type="text/ng-template" id="publish_annotation_btn.html">
     {{ include_raw("h:templates/client/publish_annotation_btn.html") }}
   </script>
+  <script type="text/ng-template" id="search_status_bar.html">
+    {{ include_raw("h:templates/client/search_status_bar.html") }}
+  </script>
 {% endblock %}
 
 {# Override ga_pageview block to prevent a 'pageview' event from being sent to
