Disable autocomplete for the reset password form
The browser certainly shouldn't be able to autocomplete the reset code,
and thus we can try to hint that it shouldn't try.

--- a/h/templates/deform/includes/common_attrs.jinja2
+++ b/h/templates/deform/includes/common_attrs.jinja2
@@ -14,6 +14,9 @@ aria-invalid="true"
 {%- if field.widget.autofocus -%}
 autofocus onfocus="this.select()"
 {% endif -%}
+{%- if field.widget.disable_autocomplete -%}
+autocomplete="off"
+{% endif -%}
 {%- if field.widget.max_length -%}
 maxlength="{{ field.widget.max_length }}"
 {% endif -%}
