--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -11,7 +11,7 @@
     <i class="h-icon-arrow-drop-down"></i>
   </span>
   <ul class="dropdown-menu pull-right" role="menu">
-    <li ng-repeat="group in sortedGroups()">
+    <li ng-repeat="group in groups.all()">
       <div ng-class="{'group-item': true, selected: group.id == groups.focused().id}"
            ng-click="groups.focus(group.id)">
         <!-- the group icon !-->
