--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -14,6 +14,8 @@ $base-line-height: 20px;
 @import './publish-annotation-btn';
 @import './search-status-bar';
 @import './share-link';
+@import './simple-search';
+@import './top-bar';
 
 body {
   @extend .noise;
