Implement new layout of top bar when groups feature is enabled
When the groups feature is enabled, use the new top bar design
from https://trello.com/c/DZEDxU4C/90-top-bar-ui-updates :

 [Group selector    ] [Search][Sort][Share][Account]

 * Align the left/right edges of the top-bar content
   with the content below.

 * Use a placeholder icon for the account menu for the moment.
   It will be replaced with an appropriate SVG when available.

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -18,11 +18,13 @@ $base-line-height: 20px;
 @import './top-bar';
 
 body {
+  $sidebar-h-padding: 9px;
+
   @extend .noise;
   font-family: $sans-font-family;
   font-weight: 300;
-  padding: .72rem;
-  padding-top: calc(.72em + 30px);
+  padding: $sidebar-h-padding;
+  padding-top: calc($sidebar-h-padding + 30px);
   -webkit-overflow-scrolling: touch;
 
   @include respond-to(tablets desktops) {
