Remove the rounded corners and top border from the sidebar
 * Make the corners of the top bar straight

 * Remove the unnecessary border at the top of the sidebar,
   since the sidebar is already bordered by the bottom
   of the browser's address bar

T-90

--- a/h/static/styles/top-bar.scss
+++ b/h/static/styles/top-bar.scss
@@ -3,8 +3,7 @@
 
 .top-bar {
   background: $white;
-  border: solid 1px $gray-lighter;
-  border-style: solid none;
+  border-bottom: solid 1px $gray-lighter;
   height: 30px;
   font-size: 15px;
   position: fixed;
