--- a/h/static/styles/annotator/inject.scss
+++ b/h/static/styles/annotator/inject.scss
@@ -86,10 +86,18 @@ $base-font-size: 14px;
 
 // Sidebar
 .annotator-frame {
+  // a CSS reset which attempts to prevent the host page's styles
+  // from affecting the styles of the sidebar.
+  //
+  // FIXME - This component and other annotator components which currently
+  // live on the page could be isolated from the host page's CSS/JS via
+  // transparent same-origin iframes
   @import '../reset';
   @import './bucket-bar';
   @include nested-reset;
   @include reset-box-model;
+
+  // frame styles
   @include user-select(none);
   @extend .noise;
   direction: ltr;
@@ -125,51 +133,44 @@ $base-font-size: 14px;
   @include icons {
     font-family: 'h';
   }
-}
 
-.annotator-no-transition {
-  @include transition(none !important);
-}
-
-.annotator-placeholder {
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  z-index: -1;
-}
-
-
-//CONTROLBAR STUFF////////////////////////////////
-.annotator-frame .annotator-toolbar {
-  position: absolute;
-  left: -($bucket-bar-width + 18px - 7px);
-  width: 37px;
-  z-index: 2;
-
-  ul {
-    height: 100%;
+  .annotator-no-transition {
+    @include transition(none !important);
   }
 
-  ul, li {
-    box-sizing: border-box;
-    @include reset-box-model;
-    @include reset-list-style;
-  }
-}
-
-.annotator-frame .annotator-toolbar li {
-  font-size: 18px;
-  margin-bottom: 5px;
-
-  &:first-child button {
-    @include box-shadow(none);
-    border-radius: 4px 0 0 4px;
-    border-right-style: none;
-    padding-right: 6px;
-    width: 36px;
+  .annotator-placeholder {
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    z-index: -1;
   }
 
-  button {
+  // the vertical toolbar at the left-edge of the sidebar
+  // which provides controls for toggling the sidebar,
+  // toggling highlights etc.
+
+  // note: These components CSS classes are nested inside
+  // .annotator-frame to avoid being overridden by the
+  // CSS reset styles applied to .annotator-frame, which would otherwise
+  // have higher specificity
+  .annotator-toolbar {
+    position: absolute;
+    left: -($bucket-bar-width + 18px - 7px);
+    width: 37px;
+    z-index: 2;
+
+    ul {
+      height: 100%;
+    }
+
+    ul, li {
+      box-sizing: border-box;
+      @include reset-box-model;
+      @include reset-list-style;
+    }
+  }
+
+  .annotator-frame-button {
     @include single-transition(background-color, .25s, .25s);
     @include smallshadow;
     background: $white;
@@ -180,16 +181,27 @@ $base-font-size: 14px;
     height: 30px;
     width: 30px;
     padding: 0;
+    font-size: 18px;
+    margin-bottom: 5px;
+
+    &:active {
+      @include single-transition(background-color, .25s);
+      background-color: $gray-light;
+    }
+
+    &:focus, &:hover {
+      outline: 0;
+      color: $text-color;
+    }
   }
 
-  button:active {
-    @include single-transition(background-color, .25s);
-    background-color: $gray-light;
-  }
-
-  button:focus, button:hover {
-    outline: 0;
-    color: $text-color;
+  .annotator-frame-button--sidebar_toggle {
+    @include box-shadow(none);
+    border-radius: 0px;
+    border-style: none none solid solid;
+    padding-right: 6px;
+    width: 36px;
+    margin-bottom: 10px;
   }
 }
 
