Update button styling for top bar icons
Update the button styling for top bar icons to match
the mocks.

The icons have been changed to <a> rather than <button> tags
to work around an issue I see in Firefox where the icon
is initially clipped when loaded and then re-renders itself
correctly on hover. This needs additional investigation.

--- a/h/static/styles/top-bar.scss
+++ b/h/static/styles/top-bar.scss
@@ -39,6 +39,17 @@
   margin-right: .75em;
 }
 
+.top-bar__btn {
+  color: $gray-light;
+  display: inline-block;
+  min-width: 28px;
+  cursor: pointer;
+
+  &:focus, .js-focus, &:hover, .js-hover {
+    color: $gray-dark;
+  }
+}
+
 .top-bar .btn {
   color: $gray-light;
   min-width: 28px;
