Collapse the search input when the search query is empty
When the new top-bar design is enabled,
collapse the search input unless the field is hovered,
focused or there is an active search query.

In the legacy top-bar design, the search field remains
expanded all the time

T-90

--- a/h/static/styles/simple-search.scss
+++ b/h/static/styles/simple-search.scss
@@ -17,17 +17,32 @@
   color: $gray-light;
 }
 
-input.simple-search-input {
-  flex-grow: 1;
-  order: 1;
+@at-root {
+  $expanded-max-width: 150px;
 
-  color: $text-color;
-  border: none;
-  outline: none;
-  padding: 0;
+  .simple-search-input {
+    flex-grow: 1;
+    order: 1;
 
-  &:disabled {
-    background: none;
-    color: $gray-light;
+    color: $text-color;
+    border: none;
+    outline: none;
+    padding: 0;
+
+    max-width: 0px;
+    transition: max-width .3s ease-out;
+
+    &:disabled {
+      background: none;
+      color: $gray-light;
+    }
+
+    &:focus,&.is-expanded {
+      max-width: $expanded-max-width;
+    }
+  }
+
+  .simple-search-form:hover .simple-search-input {
+    max-width: $expanded-max-width;
   }
 }
