Use websocket URL provided in settings
Rather than constructing a URL from hard-coded defaults in the streamer
service, we pass the websocket URL from the backend in the settings
object and use this when opening the websocket.

--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -104,6 +104,7 @@
     window.hypothesis = window.hypothesis || {};
     window.hypothesis.settings = {
       apiUrl: "{{ request.route_url('api') }}",
+      websocketUrl: "{{ request.route_url('ws') | websocketize }}",
     };
   </script>
   {% assets "app_js" %}
